@startuml
skinparam linetype ortho

class Configuration
abstract Rule
abstract ProxyNode
abstract Policy extends ProxyNode
abstract Bound
abstract Inbound extends Bound
abstract Outbound extends Bound
abstract Pipeline
abstract Connection
class Endpoint
class Server<<ConnectionType>>

Server --* Connection
Rule --> ProxyNode
ProxyNode --o Policy
ProxyNode ..> Bound
Bound --> Endpoint
Connection --* Bound
Connection ..> Configuration
Configuration .u.> Rule
Outbound --> Pipeline
@enduml

@startuml
actor User
frame Laptop{
    boundary Browser
    node ProxyServer {
        component Inbound
        component Outbound
    }
}
cloud Internet{
    boundary RemoteProxyServer
    entity Baidu
    entity Youtube
}

User -r- Browser
Browser -- Inbound
Inbound -- Outbound
Outbound -d- RemoteProxyServer
Outbound -r- Baidu
RemoteProxyServer -- Youtube
@enduml